Bootstrap och loggain/loggaut

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,9 +2,12 @@ imports:
     - { resource: parameters.ini }
     - { resource: security.yml }
 
+parameters:
+    locale:          sv
+
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     charset:         UTF-8
     router:          { resource: "%kernel.root_dir%/config/routing.yml" }
