Added Messy and an error_log provider

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,12 @@ parameters:
     locale:          sv
     fos_user.profile.form.type: stoxs_user_profile
 
+services:
+    messy_error_log_provider:
+        class: Messy\Provider\ErrorLogProvider
+        tags:
+          - { name: messy.provider, priority: 0 }
+
 framework:
     #esi:             ~
     translator:      { fallback: %locale% }
